<?xml version="1.0" encoding="utf-8"?><!-- Data binding layout -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Asteroid data -->
    <data>

        <variable
            name="asteroid"
            type="com.example.asteroidradar.Asteroids" />
    </data>
    <!-- ConstraintLayout consists 2 textViews and 1 image (RecyclerView Item) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:id="@+id/codeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/asteroid_codename"
            android:text="@{asteroid.codename}"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/asteroid_date"
            android:text="@{asteroid.closeApproachDate}"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/codeName"
            app:layout_constraintTop_toBottomOf="@+id/codeName" />

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/status_image"
            app:layout_constraintBottom_toBottomOf="@+id/codeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/codeName"
            app:layout_constraintTop_toTopOf="@+id/codeName"
            app:statusImage="@{asteroid}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>